# qt-calculator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  PKGBUILD  README.md  main.cpp  qt-calculator.desktop
.github/workflows/: mirror.yml
